modify baseUrl and title

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://favourokeibunor.com/"
+baseURL = "https://okeibunor.github.io/"
 defaultContentLanguage = "en"
 
 enableRobotsTXT = true
