--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -3,7 +3,7 @@ languageName = "English"
 languageDirection = "ltr"
 weight = 1
 
-title = "Favour Okeibunor"
+title = "favourokeibunor.com"
 copyright = "Copyright @ 2024"
 
 [params]
